<resources>
    <string name="app_name">ReNote</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="increase_font_size">Increase Font Size</string>
    <string name="decrease_font_size">Decrease Font Size</string>
    <string name="underline">Underline</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="load">Load</string>
    <string name="image">Image</string>
>>>>>>> images
</resources>