<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_bold"
          android:icon="@drawable/ic_baseline_format_bold_24"
          android:title="@string/bold"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_italic"
          android:icon="@drawable/ic_baseline_format_italic_24"
          android:title="@string/italic"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_underline"
          android:icon="@drawable/ic_baseline_format_underlined_24"
          android:title="@string/underline"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_strikethrough"
          android:icon="@drawable/ic_baseline_format_strikethrough_24"
          android:title="@string/strikethrough"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_increase_font_size"
          android:icon="@drawable/ic_baseline_text_increase_24"
          android:title="@string/increase_font_size"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_decrease_font_size"
          android:icon="@drawable/ic_baseline_text_decrease_24"
          android:title="@string/decrease_font_size"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_save"
          android:icon="@drawable/ic_baseline_save_24"
          android:title="@string/save"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_baseline_settings_24"
          android:title="@string/settings"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"/>
</menu>